Lagt inn innholdet vi har så langt

--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -9,66 +9,211 @@
   </head>
   <body>
     <header>
+      <img id="header-background-img" src="https://source.unsplash.com/category/food/1800x1350">
       <h1>Webtek: P1 Project Requirements</h1>
-      <h2>Names, names, names</h2>
-      <time>September 23, 2016</time>
+      <h2>Aurora, Linn, Kristine, Maia &amp; Leon</h2>
+      <time>September 23th, 2016</time>
     </header>
     <main>
       <section id="client">
         <h2>The client</h2>
         <section>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            We will work with Da Carlo catering. They are a small firm located in Oslo doing catering for people. They deliver delicious Mediterranean and South American food. They are also in a search for a bigger company where they could start making a canteen operational.
+          </p>
+          <p>
+            They are a small group of professional chefs that take great pride in delivering delicious, savory food with inspiration from their home country. The chefs are born in Chile, Uruguay and Italy and brings this food tradition to Norway.
+          </p>
+          <p>
+            Our main contact is Lene Harbo, which handles the administrative operations. The manager, Juan Carlos Pequeno, will also give feedback on the website.
           </p>
         </section>
       </section>
       <section id="goals" class="alt">
-        <h2>Goal and purpouse</h2>
+        <h2>Goal &amp; Purpouse</h2>
         <section>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Until now, Da Carlo have only marketed themselves through word of mouth, but from now on they are focusing on expanding their business by increasing the number of sales. As a part of their marketing strategy they would like to create a website that will give them a presence in the digital world. This will make it easier for potential customer to understand who they are and what they can deliver. Through the website the customers will be assured that Da Carlo will give a great food experience. The website will also make it easier for customers to get in contact with Da Carlo and share it with friends, colleagues and family.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            As a catering business they want to distinguish themselves by giving a full experience, not just food in aluminium baskets. The chefs deliver the food themself, they present their own artwork with pride and joy for the whole party. They will deliver great food experiences, with a  total experience that gives the customer a wow-feeling and a feeling that they are taken care of.
+          </p>
+          <table>
+            <tr>
+              <td>Must</td>
+              <td>Should</td>
+              <td>Could</td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+          </table>
+        </section>
+      </section>
+      <section id="brand">
+        <h2>Aesthetic &amp;&nbsp;Brand</h2>
+        <section>
+          <p>
+            The client wants to capture a large user group with the website design and appearance. The website should persuade the customers that Da Carlo will give them great food for their special happening.
+          </p>
+          <h3>Values</h3>
+          <ul>
+            <li>Personal</li>
+            <li>Latin</li>
+            <li>Genuine</li>
+            <li>Exciting experience</li>
+            <li>Memorable</li>
+          </ul>
+          <p>
+            The website should feel personal, warm and genuine. It should communicate that the food is made by great ingredients by chefs that are delighted to make outstanding food. The website should communicate the chefs personalities. It is not the kind of business that will use “highclass”, “feinsmecker” words to describe the food. It is real, genuine food, made by real, genuine chefs.
+          </p>
+          <p>
+            The company already have a logo and a limited style guide including colors and some graphical elements. They want to keep the logo, but we are free to explore the aesthetic possibilities.
+          </p>
+          <h3>Moodboard</h3>
+          <figure class="full">
+            <img src="img/moodboard_DaCarlo.png" alt="moodboard" />
+            <figcaption>Moodboard created together with the client</figcaption>
+          </figure>
+          <p>
+            The moodboard shows an overall look of a possible aesthetic direction for the website.
           </p>
         </section>
       </section>
-      <section id="audience">
+      <section id="audience" class="alt">
         <h2>Audience</h2>
         <section>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Da Carlo delivers a bit of luxury and enjoyment to the people on their special event (PRØVE Å SI HER: litt luksus til “gjennomsnittsmennesket”, eller til “folket”, vanlige folk. Finner ikke en god måte)))). To better describe what kind of people the client wants to reach out to, we made three different personas. Personas are a description of one person, that can represent the customers different market segmentations. They help us as web designers to map out the different needs and wants the different kind of customers.
           </p>
+          <h3>Personas</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Together with the client we have developed three personas to represent the user group blablabla.
+          </p>
+          <h4>Marianne – "The small party client"</h4>
+          <figure class="aside persona">
+            <img src="img/persona2.png">
+            <figcaption>Marianne</figcaption>
+          </figure>
+          <ul>
+            <li>43 år</li>
+            <li>Working as a nurse</li>
+            <li>Divorced mother of three. </li>
+            <li>One child at 14 years old, confirmation party</li>
+            <li>Family and friends. A party of 35 people. </li>
+            <li>Need help with the food arrangements </li>
+            <li>Not tech savvy at all</li>
+          </ul>
+          <p>
+            The 14 year old want something special for her day. Something that are a bit different. Not something boring tasting food, a culinary experience. Marianne wants to give her child a great day, but worried about the total price of the whole day.
+          </p>
+          <h4>Louise and Pedro – "The large party client"</h4>
+          <figure class="aside persona">
+            <img src="img/persona1.png">
+            <figcaption>Louise and Pedro</figcaption>
+          </figure>
+          <ul>
+            <li>(31 and 29)</li>
+            <li>Getting married</li>
+            <li>Both working as freelance journalists</li>
+            <li>Will have a wedding of 90 people</li>
+            <li>Pedro is originally from Uruguay</li>
+          </ul>
+          <p>
+            Want to bring the splendid food tradition to their Norwegian wedding Importance with genuine and a personal experience. They do not want a stiff, high class party. Need help with the food, serving and
+          </p>
+          <h4>Kristian – "the business customer"</h4>
+          <figure class="aside persona">
+            <img src="img/persona3.png">
+            <figcaption>Kristian</figcaption>
+          </figure>
+          <ul>
+            <li>57 år</li>
+            <li>Bicycle to work every day</li>
+            <li>Two kids not living at home anymore</li>
+            <li>BLABLA fylle inn litt svada her?</li>
+            <li>CEO of a medium sized company in Norway</li>
+          </ul>
+          <p>
+            New arrangements for the canteen at work Looking for a deal. Want to attract good employees by giving the employees a better lunch experience. Dont want the traditional boring canteens
           </p>
         </section>
       </section>
-      <section id="content" class="alt">
-        <h2>Content</h2>
+      <section id="content">
+        <h2>Content &amp; Structure</h2>
         <section>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Intro to content Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <figure class="full">
+            <img src="http://www.chadchad.com/examples-large/ixd/Mexico.com-Sitemap.jpg">
+            <figcaption>Proposed sitemap</figcaption>
+          </figure>
+          <p>
+            Should be easy to navigate in, the users are not necessarily especially tech interested.
+          </p>
+          <h3>1. Homepage</h3>
+          <p>
+            must inspire customers, make them hungry for savory delicious food. Include pictures of ingredients and food. Communicate Da Carlos passion for food and great experiences. Could it communicate both the catering services and the canteen possibility? With main focus on catering. If possible, it would be nice if the canteen also could have some priority on the homepage.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Must: a couple of pictures of the different kinds of what they want to be associated with. For example paella, empanadas. Notes: savoury, tasty, colorful. Could: include quotes from earlier customers to create trust and excitement.
+          </p>
+          <h3>2. About</h3>
+          <p>
+            Short text about Da Carlo as business, what they want to deliver. What the customers should expect from them. This information should be relevant both for catering and the canteen, because the Da Carlo experience will be the same.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            A picture of all the chefs.
+          </p>
+          <h4>2.1. About the chefs</h4>
+          <p>
+            Introduction of the four chefs with picture and short text to create a feeling of a personal bond between the customers and Da Carlo Catering.
+          </p>
+          <h3>3. Catering</h3>
+          <p>
+            Information on how exactly the delivering will happen, emphasize that the chefs deliver the food and an experience. Communicate that they deliver three-course dinner, finger food, desserts, latin barbeques and have a speciality in tapas. But that they will customize to the customer needs and the specific event. If the event requires it, they can bring professional waiters and bartenders.
+          </p>
+          <h3>4. Menu</h3>
+          <p>
+            Listing of the menu. There might be different packages to choose from, but these are not specified yet.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Communicate the different possibilities, but include that customizing is possible.
+          </p>
+          <h3>5. Canteen</h3>
+          <p>
+            Information about the possibility for Da Carlo to work in a canteen. Communicate that the manager has a long experience working and operating a Norwegian canteen for a big company.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Pride and joy in making savory food with inspiration from their home countries. Its tasty and different every day. Will deliver that extra experience.
           </p>
+          <p>
+            Should include a short reference to earlier work cooperation written by the other company (Nets), because they have been very pleased with the food and how it is operated.
+          </p>
+          <h3>6. Contact information</h3>
+          <p>
+            Should be easily accessible. Because of the personal experience. Just call. Or email. Maybe there could be a form to fill out, but this should be very simple and short, so that the focus is on the personal communication.
+          </p>
+          <p>
+            The text must be in Norwegian.
+          </p>
+
+
         </section>
       </section>
-      <section id="deployment">
+      <section id="deployment" class="alt">
         <h2>Deployment</h2>
         <section>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            The website will be called Da Carlo and the domain name will be dacarlo.no. The webhost will be decided later, but the client will cover its cost. After this project ends the site maintenance will be done by Linn Harbo Dahle.
           </p>
         </section>
       </section>
