--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>P1 Project Requirements</title>
+    <title>P2 Design Guidelines</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
