Lagt til Client information

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -17,10 +17,16 @@
     </header>
     <main>
       <section id="client">
-        <h2>The client</h2>
+        <h2>Administrative Details</h2>
         <div>
           <p>
-            We will work with Da Carlo catering. They are a small firm located in Oslo providing catering for people. They deliver delicious Mediterranean and South American food. They are also in a search for a bigger company where they could start making a canteen operational.           </p>
+			<strong>Client Name: </strong>Da Carlo Catering
+			<strong>Website Name:</strong> Da Carlo
+			<strong>Domain Name:</strong> dacarlo.no
+			<strong>Contact person: </strong>Lene Harbo
+			
+			
+			We will work with Da Carlo catering. They are a small firm located in Oslo providing catering for people. They deliver delicious Mediterranean and South American food. They are also in a search for a bigger company where they could start making a canteen operational.           </p>
           <p>
             They are a small group of professional chefs that take great pride in delivering delicious, savory food with inspiration from their home country. The chefs are born in Chile, Uruguay and Italy and they have brought their food traditions to Norway.
           </p>
