--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -175,6 +175,108 @@
           </p>
         </div>
       </section>
+	  
+	  <section id="plan">
+		<h2>Plan</h2>
+		<table>
+            <tr>
+              <td>Filename</td>
+              <td>Description</td>
+              <td>In charge</td>
+			  <td>Deadline</td>
+            </tr>
+            <tr>
+              <td>Text from client</td>
+              <td>All the text for the website</td>
+              <td>Linn</td>
+			  <td>14.10.16</td>
+            </tr>
+            <tr>
+              <td>template.html</td>
+              <td>A template for the html documents</td>
+              <td>Aurora and Leon</td>
+			  <td>14.10.16</td>
+            </tr>
+			<tr>
+              <td>index.html</td>
+              <td>The homepage. Info about catering, canteen and who they are</td>
+              <td>Kristine</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>catering.html</td>
+              <td>Short text about what catering services they provide </br> The menus</td>
+              <td>Linn</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>kantine.html</td>
+              <td>Short texts about how they can provide canteen services </br>References from earlier canteen services</td>
+              <td>Kristine</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>om.html</td>
+              <td>Intro about the business </br>Information about the chefs, including picture and quote</td>
+              <td>Maia</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>kontakt.html</td>
+              <td>Contact information</br>Forms for contacting about canteen and catering</td>
+              <td>Maia</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>style.css</td>
+              <td>Styling for all the pages</td>
+              <td>Aurora and Leon</td>
+			  <td>14.10.16</td>
+            </tr>
+			<tr>
+              <td>sticky_navbar.js</td>
+              <td>Sticky header when scrolling</td>
+              <td>Leon</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>contact_form_validation.js</td>
+              <td>Contact form with validation on input for both canteen and catering</td>
+              <td>Maia and Kristine</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>menu_panel.js</td>
+              <td>A tabbed panel for different catering menus</td>
+              <td>Linn</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>header_image_carousel.js</td>
+              <td>A carousel for the homepage showing background images in random order</td>
+              <td>Aurora</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>Modularity? part?</td>
+              <td>-</td>
+              <td>-</td>
+			  <td>-</td>
+            </tr>
+			<tr>
+              <td>Final control</td>
+              <td>Checking the code</td>
+              <td>All</td>
+			  <td>06.11.16</td>
+            </tr>
+			<tr>
+              <td>Testing</td>
+              <td>Undertesting of the site</td>
+              <td>All</td>
+			  <td>10.11.16</td>
+            </tr>
+          </table>
+	  
       <section id="content">
         <h2>Content &amp; Structure</h2>
         <div>
