--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -20,12 +20,13 @@
         <h2>Administrative Details</h2>
         <div>
           <p>
-			<strong>Client Name: </strong>Da Carlo Catering
-			<strong>Website Name:</strong> Da Carlo
-			<strong>Domain Name:</strong> dacarlo.no
-			<strong>Contact person: </strong>Lene Harbo
-			
-			
+			<strong>Client Name: </strong>Da Carlo Catering <br>
+			<strong>Website Name:</strong> Da Carlo <br>
+			<strong>Domain Name:</strong> dacarlo.no <br>
+			<strong>Contact person: </strong>Lene Harbo <br>
+		  </p>
+
+		  <p>
 			We will work with Da Carlo catering. They are a small firm located in Oslo providing catering for people. They deliver delicious Mediterranean and South American food. They are also in a search for a bigger company where they could start making a canteen operational.           </p>
           <p>
             They are a small group of professional chefs that take great pride in delivering delicious, savory food with inspiration from their home country. The chefs are born in Chile, Uruguay and Italy and they have brought their food traditions to Norway.
@@ -36,10 +37,10 @@
         </div>
       </section>
       <section id="goals" class="alt">
-        <h2>Goal &amp; Purpouse</h2>
+        <h2>Goal, Audience &amp; Purpose</h2>
         <div>
           <p>
-            Until now, Da Carlo have only marketed themselves through word of mouth, but from now on they are focusing on expanding their business by increasing the number of sales. As a part of their marketing strategy they would like to create a website that will give them a presence in the digital world. This will make it easier for potential customers to understand who they are and what they can deliver. Through the website the customers will be assured that Da Carlo will give a great food experience. The website will also make it easier for customers to get in contact with Da Carlo and share it with friends, colleagues and family.
+            The website’s purpose is to give Da Carlo a presence in the digital world, as part of a marketing strategy to expand their business by increasing the number of sales. Thus, our goal is to inform potential customers of who Da Carlo are, what they can deliver and how to contact them. We also want to help Da Carlo distinguish themselves and assure their audience that they deliver not only great food, but full food experiences. The main audience will be people who demand a little extra luxury on their special event - organizers both of business events and of private parties of different sizes.
           </p>
           <p>
             As a catering business they want to distinguish themselves by giving a full experience, not just food in aluminium baskets. The chefs deliver the food themselves, they present their own artwork with pride and joy for the whole party. They want to deliver great food experiences, with a total experience that gives the customer a wow-feeling and a feeling that they are taken care of.
@@ -70,6 +71,21 @@
             <li>Be available in English</li>
           </ul>
         </div>
+      </section>
+      <section id="navigation" class="alt">
+        <h2>Navigation Structure</h2>
+        <div>
+          <p>
+            Navigation of Da Carlo’s website is concise and effective. The site comprises of five main pages: Hjem, Kantine, Kontakt, Om DaCarlo and Catering. All of these can be reached from any other page through a global horizontal navigation bar, always visible in the top of the browser window. This allows users to retain an overview of the website structure at all times, and leaves freedom to move about and find any information quickly. All pages also feature a similar navigation footer in the bottom. The low number of pages makes the navigation bars easy to scan and directly corresponds to the areas of information the client wants to convey, as well as the amount of information within them.
+          </p>
+          <p>
+            Additionally, the content of specific pages links to other related pages. This makes up a local and more content driven level of navigation. For example, the different sections of the home page link to all of the other pages in turn, while both Kantine, Catering and Om Da Carlo logically have a bottom contact banner linking to the contact page.
+          </p>
+          <figure class="navigationimage">
+            <img src="img/navigasjonsstruktur.png" alt="Overall Navigation">
+            <figcaption>Navigation</figcaption>
+          </figure>
+        <div>
       </section>
       <section id="brand">
         <h2>Aesthetic &amp;&nbsp;Brand</h2>
