--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -83,15 +83,14 @@
           </p>
           <figure class="navigationimage">
             <img src="img/navigasjonsstruktur.png" alt="Overall Navigation">
-            <figcaption>Navigation</figcaption>
           </figure>
         <div>
       </section>
       <section id="brand">
-        <h2>Aesthetic &amp;&nbsp;Brand</h2>
+        <h2>Page Layout &amp;&nbsp;Appearance</h2>
         <div>
           <p>
-            The client wants to capture a large user group with the website design and appearance. The website should persuade the customers that Da Carlo will give them great food for their special happening.
+            The page will have an universal graphic appearance to show the users that they are still on the same website. This will consist of the same fonts, same effect on pictures and layout principles. It is important to us that we keep in mind our clients value words that he wants the website to match:
           </p>
           <h3>Value words</h3>
           <ul>
