La til et bilde på siden

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -37,7 +37,7 @@
         </div>
       </section>
       <section id="goals" class="alt">
-        <h2>Goal, Audience &amp; Purpose</h2>
+        <h2>Goal &amp; Purpose</h2>
         <div>
           <p>
             The website’s purpose is to give Da Carlo a presence in the digital world, as part of a marketing strategy to expand their business by increasing the number of sales. Thus, our goal is to inform potential customers of who Da Carlo are, what they can deliver and how to contact them. We also want to help Da Carlo distinguish themselves and assure their audience that they deliver not only great food, but full food experiences. The main audience will be people who demand a little extra luxury on their special event - organizers both of business events and of private parties of different sizes.
@@ -114,6 +114,33 @@
           <p>
             The moodboard shows an overall look of a possible aesthetic direction for the website.
           </p>
+          <figure class="aside mockup1">
+            <img src="img/mockup1.png" alt="Layout Mockup">
+            <figcaption>Mockup of webpage</figcaption>
+          </figure>
+          <h3>Layout</h3>
+          <p>
+            We want longer, but fewer pages to avoid too many clicks. All pages of our website consist of some common content. This includes the logo of Da Carlo Catering, which will be displayed on the top of every page. Behind the logo will be a photograph, “Main picture” this will be different for every page, but have in common that they work as the background for the whole page, not changing as the user scrolls down the page. On the main page, the main picture will also be a picture carousel. The height of the image will always be the height of the viewport, minus the navbar. The picture will be centered on the page, so that the center of the image is visible on smaller displays.
+          </p>
+          <p>
+            It was important for our client that the website provide clear and easy access to the information about Da Carlo as a company and the services that they provide. We have placed the navigation bar under the main picture to give a clear overview of what this website contains as well as easy access to the different underlying pages.
+          </p>
+          <p>
+            We want to create a wow-factor for Da Carlo’s potential customers, and we think by designing a modern layout with information in boxes that slide over bigger pictures, we will capture the users eyes compared to other catering firms’ websites. Some of the boxes will have a texture to make the information “pop”. Although it is important that the page don’t feel dated, we want to reach out to a broad audience and we want to make the design feel including.
+          </p>
+          <p>
+            Every page will include the navbar, a segment about contact information and a footer. The only exception here is the “Kontakt oss” page where the contact information naturally will take up not just a segment of the page, but the whole page. The fact that contact information is available on all the pages of the site will help fulfill the goal of making contact information easily accessible.
+          </p>
+          <p>
+            The page will be responsive in the way that the navbar should become a hamburger menu when the viewport is less than a smartphone: 344px (or percentage). The boxes will then fill the viewport, however you can still see the main picture in the background as the boxes scroll over it.
+          </p>
+          <h3>Appearance</h3>
+          <p>
+            <strong>Font:</strong> Lora for body text and Lato for headers<br>
+            <strong>Colours:</strong> HEX: #009998 : Turqoise, as a contrast colour to be able to control the users focus on the page. This is the colour that is in Da Carlo’s logo. <br>
+            <strong>Text:</strong> We want the pictures to speak for themselves so we don’t want the text be too long on each page.<br>
+            <strong>Filters: </strong>The main pictures will be different on each page. However, the pictures will have a dark filter to make the logo “pop” and to have a continuous “feel” throughout the whole webpage.
+          </p>
         </div>
       </section>
       <section id="audience" class="alt">
@@ -174,108 +201,6 @@
           </p>
         </div>
       </section>
-	  
-	  <section id="plan">
-		<h2>Plan</h2>
-		<table>
-            <tr>
-              <td>Filename</td>
-              <td>Description</td>
-              <td>In charge</td>
-			  <td>Deadline</td>
-            </tr>
-            <tr>
-              <td>Text from client</td>
-              <td>All the text for the website</td>
-              <td>Linn</td>
-			  <td>14.10.16</td>
-            </tr>
-            <tr>
-              <td>template.html</td>
-              <td>A template for the html documents</td>
-              <td>Aurora and Leon</td>
-			  <td>14.10.16</td>
-            </tr>
-			<tr>
-              <td>index.html</td>
-              <td>The homepage. Info about catering, canteen and who they are</td>
-              <td>Kristine</td>
-			  <td>21.10.16</td>
-            </tr>
-			<tr>
-              <td>catering.html</td>
-              <td>Short text about what catering services they provide </br> The menus</td>
-              <td>Linn</td>
-			  <td>21.10.16</td>
-            </tr>
-			<tr>
-              <td>kantine.html</td>
-              <td>Short texts about how they can provide canteen services </br>References from earlier canteen services</td>
-              <td>Kristine</td>
-			  <td>21.10.16</td>
-            </tr>
-			<tr>
-              <td>om.html</td>
-              <td>Intro about the business </br>Information about the chefs, including picture and quote</td>
-              <td>Maia</td>
-			  <td>21.10.16</td>
-            </tr>
-			<tr>
-              <td>kontakt.html</td>
-              <td>Contact information</br>Forms for contacting about canteen and catering</td>
-              <td>Maia</td>
-			  <td>21.10.16</td>
-            </tr>
-			<tr>
-              <td>style.css</td>
-              <td>Styling for all the pages</td>
-              <td>Aurora and Leon</td>
-			  <td>14.10.16</td>
-            </tr>
-			<tr>
-              <td>sticky_navbar.js</td>
-              <td>Sticky header when scrolling</td>
-              <td>Leon</td>
-			  <td>28.10.16</td>
-            </tr>
-			<tr>
-              <td>contact_form_validation.js</td>
-              <td>Contact form with validation on input for both canteen and catering</td>
-              <td>Maia and Kristine</td>
-			  <td>28.10.16</td>
-            </tr>
-			<tr>
-              <td>menu_panel.js</td>
-              <td>A tabbed panel for different catering menus</td>
-              <td>Linn</td>
-			  <td>28.10.16</td>
-            </tr>
-			<tr>
-              <td>header_image_carousel.js</td>
-              <td>A carousel for the homepage showing background images in random order</td>
-              <td>Aurora</td>
-			  <td>28.10.16</td>
-            </tr>
-			<tr>
-              <td>Modularity? part?</td>
-              <td>-</td>
-              <td>-</td>
-			  <td>-</td>
-            </tr>
-			<tr>
-              <td>Final control</td>
-              <td>Checking the code</td>
-              <td>All</td>
-			  <td>06.11.16</td>
-            </tr>
-			<tr>
-              <td>Testing</td>
-              <td>Undertesting of the site</td>
-              <td>All</td>
-			  <td>10.11.16</td>
-            </tr>
-          </table>
-	  
       <section id="content">
         <h2>Content &amp; Structure</h2>
         <div>
