Oppdatering av bilde

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -106,14 +106,14 @@
           <p>
             The company already has a logo and a limited style guide including colors and some graphical elements. They want to keep the logo, but we are free to explore the aesthetic possibilities.
           </p>
+          <p>
+            The moodboard shows an overall look of a possible aesthetic direction for the website.
+          </p>
           <h3>Moodboard</h3>
           <figure class="full">
             <img src="img/moodboard_DaCarlo.png" alt="moodboard" />
             <figcaption>Moodboard created together with the client</figcaption>
           </figure>
-          <p>
-            The moodboard shows an overall look of a possible aesthetic direction for the website.
-          </p>
           <div class="full-width">
             <div class="left">
               <h3>Layout</h3>
@@ -138,14 +138,15 @@
               </figure>
             </div>
           </div>
-          <div>
-          <h3>Appearance</h3>
-          <p>
-            <strong>Font:</strong> Lora for body text and Lato for headers<br>
-            <strong>Colours:</strong> HEX: #009998 : Turqoise, as a contrast colour to be able to control the users focus on the page. This is the colour that is in Da Carlo’s logo. <br>
-            <strong>Text:</strong> We want the pictures to speak for themselves so we don’t want the text be too long on each page.<br>
-            <strong>Filters: </strong>The main pictures will be different on each page. However, the pictures will have a dark filter to make the logo “pop” and to have a continuous “feel” throughout the whole webpage.
-          </p>
+          <section id = "infobox" class="right">
+            <h3>Appearance</h3>
+            <p>
+              <strong>Font:</strong> Lora for body text and Lato for headers<br>
+              <strong>Colours:</strong> HEX: #009998 : Turqoise, as a contrast colour to be able to control the users focus on the page. This is the colour that is in Da Carlo’s logo. <br>
+              <strong>Text:</strong> We want the pictures to speak for themselves so we don’t want the text be too long on each page.<br>
+              <strong>Filters: </strong>The main pictures will be different on each page. However, the pictures will have a dark filter to make the logo “pop” and to have a continuous “feel” throughout the whole webpage.
+            </p>
+          </section>
         </div>
       </section>
       <section id="audience" class="alt">
