--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -266,10 +266,10 @@
 		<h4>Work division and deadlines</h4>
 		<table>
             <tr>
-              <td>Filename</td>
-              <td>Description</td>
-              <td>In charge</td>
-			  <td>Deadline</td>
+              <th>Filename</th>
+              <th>Description</th>
+              <th>In charge</th>
+			  <th>Deadline</th>
             </tr>
             <tr>
               <td>Text from client</td>
