--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -288,9 +288,9 @@
 		</ul>
     </div>
     <section id="tabel">
-      <div  class="full-width">
+      <div>
 		  <h3>Work division and deadlines </h3>
-		      <table>
+		      <table class="full-width">
             <tr>
               <th>Filename</th>
               <th>Description</th>
